made change to understand query working for sensor_type filter only
