# genesis_openapi.json
@@ -53,6 +53,54 @@
         }
       }
     },
+    "/sensors": {
+      "get": {
+        "summary": "List of sensor",
+        "description": "Get a list of all sensor available on this server.",
+        "operationId": "Sensor",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "sensor_id": {
+                        "type": "number"
+                      },
+                      "global_sensor_name":{"type":"string","example":"VER_W1_B2_GF_B_1_temp"},
+                      "sensor_alias": {
+                        "type": "string",
+                        "example": "B2 AC 1_temp"
+                      },
+                      "sensor_type": {
+                        "type": "string",
+                        "example": "Temperature"
+                      },
+                      "metric_unit": {
+                        "type": "string",
+                        "example": "Celsius"
+                      },
+                      "unit_id": {
+                        "type": "number"
+                      },
+                      "unit_alias": {
+                        "type": "string",
+                        "example": "B2 AC"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
     "/locations/{id}/summary": {
       "get": {
         "summary": "General warehouse summary",
